GH-130: replace ZeroCell with custom implementation
- Migrated to custom excel processor via the same apache poi lib under the hood, but w/o ZeroCell to avoid maintenance effort and improve implementation
- Added default set of type converters with auto-conversion feature
- Removed column index dependency
- Extended code coverage
- Updated readme and changelog
- Added optional debugging feature for contributors